oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__mode_interactions_irm_at_right_margin_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
                                                                             XYA
