oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__mode_interactions_irm_wide_char_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
ABC好 DEFGHIJ
