oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__mode_interactions_origin_scroll_basic_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
                                                                                
                                                                                
                                                                                
                                                                                
Origin top                                                                      
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
Origin bottom
