oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__mode_interactions_origin_scroll_overflow_97x33_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
              Line 03                                                                            
                     Line 04                                                                     
                            Line 05                                                              
                                   Line 06                                                       
                                          Line 07                                                
                                                 Line 08
